--- a/archives/toutiao-search/2024-04-16.md
+++ b/archives/toutiao-search/2024-04-16.md
@@ -1,55 +1,68 @@
 # 2024-04-16
 
-共 98 条
+共 105 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 16 2024 06:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 16 2024 07:00:36 GMT+0800 (China Standard Time) -->
 1. [12306回应年轻人卧铺挂帘子](https://so.toutiao.com/search?keyword=12306回应年轻人卧铺挂帘子)
 1. [党媒评男生与醉汉冲突：应办成铁案](https://so.toutiao.com/search?keyword=党媒评男生与醉汉冲突：应办成铁案)
 1. [广交会擦亮“中国制造”创新招牌](https://so.toutiao.com/search?keyword=广交会擦亮“中国制造”创新招牌)
 1. [“提灯定损”涉事违建房屋确定拆除](https://so.toutiao.com/search?keyword=“提灯定损”涉事违建房屋确定拆除)
 1. [以色列按兵不动是否真被伊朗震住了](https://so.toutiao.com/search?keyword=以色列按兵不动是否真被伊朗震住了)
 1. [71岁保洁被开除后在物业办公室自杀](https://so.toutiao.com/search?keyword=71岁保洁被开除后在物业办公室自杀)
-1. [86岁老人隆重仪式迎娶初恋女友](https://so.toutiao.com/search?keyword=86岁老人隆重仪式迎娶初恋女友)
+1. [即将接任新加坡总理的黄循财是谁](https://so.toutiao.com/search?keyword=即将接任新加坡总理的黄循财是谁)
 1. [美专家：至少7枚导弹击中以军基地](https://so.toutiao.com/search?keyword=美专家：至少7枚导弹击中以军基地)
-1. [济南失联研三学生遗体被找到](https://so.toutiao.com/search?keyword=济南失联研三学生遗体被找到)
+1. [86岁老人隆重仪式迎娶初恋女友](https://so.toutiao.com/search?keyword=86岁老人隆重仪式迎娶初恋女友)
 1. [“三星堆挖出酷似飞碟青铜器”不实](https://so.toutiao.com/search?keyword=“三星堆挖出酷似飞碟青铜器”不实)
-1. [赖清德就职在即 民众：台湾要废了](https://so.toutiao.com/search?keyword=赖清德就职在即+民众：台湾要废了)
 1. [女生称一个人来演唱会 旁边男生愣了](https://so.toutiao.com/search?keyword=女生称一个人来演唱会+旁边男生愣了)
-1. [白宫：伊朗不打了以色列也不想报复](https://so.toutiao.com/search?keyword=白宫：伊朗不打了以色列也不想报复)
-1. [孩子理发138元妈妈只愿付24元](https://so.toutiao.com/search?keyword=孩子理发138元妈妈只愿付24元)
+1. [赖清德就职在即 民众：台湾要废了](https://so.toutiao.com/search?keyword=赖清德就职在即+民众：台湾要废了)
 1. [柳岩谈被男艺人随意调侃身材](https://so.toutiao.com/search?keyword=柳岩谈被男艺人随意调侃身材)
-1. [地图还原伊朗空袭以色列始末](https://so.toutiao.com/search?keyword=地图还原伊朗空袭以色列始末)
-1. [德国总理朔尔茨在沪访问](https://so.toutiao.com/search?keyword=德国总理朔尔茨在沪访问)
+1. [白宫：伊朗不打了以色列也不想报复](https://so.toutiao.com/search?keyword=白宫：伊朗不打了以色列也不想报复)
 1. [美国将迎221年来最大规模蝉灾](https://so.toutiao.com/search?keyword=美国将迎221年来最大规模蝉灾)
-1. [违建雨棚加了轮子后为何就不算违建](https://so.toutiao.com/search?keyword=违建雨棚加了轮子后为何就不算违建)
-1. [网友拍到武汉出现血红天空异象](https://so.toutiao.com/search?keyword=网友拍到武汉出现血红天空异象)
-1. [反击醉汉学生到底是不是正当防卫](https://so.toutiao.com/search?keyword=反击醉汉学生到底是不是正当防卫)
+1. [济南失联研三学生遗体被找到](https://so.toutiao.com/search?keyword=济南失联研三学生遗体被找到)
 1. [德国总理朔尔茨在重庆Citywalk](https://so.toutiao.com/search?keyword=德国总理朔尔茨在重庆Citywalk)
 1. [特斯拉全球裁员10%](https://so.toutiao.com/search?keyword=特斯拉全球裁员10%)
-1. [黄金回收价突破600元/克大关](https://so.toutiao.com/search?keyword=黄金回收价突破600元/克大关)
-1. [李显龙吁请新加坡人全力支持黄循财](https://so.toutiao.com/search?keyword=李显龙吁请新加坡人全力支持黄循财)
-1. [国际乒乓球比赛出现首个平局](https://so.toutiao.com/search?keyword=国际乒乓球比赛出现首个平局)
-1. [校方回应女生带病出操后死亡](https://so.toutiao.com/search?keyword=校方回应女生带病出操后死亡)
-1. [大V：重庆燃气频繁换计量表有猫腻吗](https://so.toutiao.com/search?keyword=大V：重庆燃气频繁换计量表有猫腻吗)
-1. [华为P系列改名Pura怎么读](https://so.toutiao.com/search?keyword=华为P系列改名Pura怎么读)
-1. [伊朗大使馆发文讽刺以色列](https://so.toutiao.com/search?keyword=伊朗大使馆发文讽刺以色列)
 1. [西双版纳来了一亿人吧](https://so.toutiao.com/search?keyword=西双版纳来了一亿人吧)
+1. [医院称引进遭举报嫖娼医生正常合规](https://so.toutiao.com/search?keyword=医院称引进遭举报嫖娼医生正常合规)
+1. [反击醉汉学生到底是不是正当防卫](https://so.toutiao.com/search?keyword=反击醉汉学生到底是不是正当防卫)
+1. [华为P系列改名Pura怎么读](https://so.toutiao.com/search?keyword=华为P系列改名Pura怎么读)
+1. [孩子理发138元妈妈只愿付24元](https://so.toutiao.com/search?keyword=孩子理发138元妈妈只愿付24元)
+1. [地图还原伊朗空袭以色列始末](https://so.toutiao.com/search?keyword=地图还原伊朗空袭以色列始末)
+1. [游客参观他人免费开放的祖宅嫌难看](https://so.toutiao.com/search?keyword=游客参观他人免费开放的祖宅嫌难看)
 1. [九旬老人控诉保姆卷走200万案开庭](https://so.toutiao.com/search?keyword=九旬老人控诉保姆卷走200万案开庭)
+1. [大V：重庆燃气频繁换计量表有猫腻吗](https://so.toutiao.com/search?keyword=大V：重庆燃气频繁换计量表有猫腻吗)
+1. [官方回应婆婆杀害儿媳3只狗](https://so.toutiao.com/search?keyword=官方回应婆婆杀害儿媳3只狗)
+1. [德国总理朔尔茨在沪访问](https://so.toutiao.com/search?keyword=德国总理朔尔茨在沪访问)
+1. [梁朝伟第六次获得金像奖影帝](https://so.toutiao.com/search?keyword=梁朝伟第六次获得金像奖影帝)
+1. [校方回应女生带病出操后死亡](https://so.toutiao.com/search?keyword=校方回应女生带病出操后死亡)
+1. [两野生獐子被老人养育10余年后放归](https://so.toutiao.com/search?keyword=两野生獐子被老人养育10余年后放归)
 1. [王晶说梁朝伟应宣布不再领奖](https://so.toutiao.com/search?keyword=王晶说梁朝伟应宣布不再领奖)
+1. [李显龙吁请新加坡人全力支持黄循财](https://so.toutiao.com/search?keyword=李显龙吁请新加坡人全力支持黄循财)
+1. [开封景区回应“王婆”出差江西](https://so.toutiao.com/search?keyword=开封景区回应“王婆”出差江西)
+1. [养1000多只鹅是一种什么体验](https://so.toutiao.com/search?keyword=养1000多只鹅是一种什么体验)
+1. [华为Pura 70或将于月底前到货](https://so.toutiao.com/search?keyword=华为Pura+70或将于月底前到货)
+1. [男子小半个月内被蜱虫咬了2次](https://so.toutiao.com/search?keyword=男子小半个月内被蜱虫咬了2次)
+1. [黄金回收价突破600元/克大关](https://so.toutiao.com/search?keyword=黄金回收价突破600元/克大关)
+1. [万达集团总部所在地被售出](https://so.toutiao.com/search?keyword=万达集团总部所在地被售出)
+1. [小孩跪地祈祷后屋顶玩具真掉下来了](https://so.toutiao.com/search?keyword=小孩跪地祈祷后屋顶玩具真掉下来了)
+1. [国际金价疯涨金饰却遇冷](https://so.toutiao.com/search?keyword=国际金价疯涨金饰却遇冷)
+1. [梧桐妹晒与萧敬腾夫妇合照](https://so.toutiao.com/search?keyword=梧桐妹晒与萧敬腾夫妇合照)
+1. [悉尼行凶案死伤中国公民均为留学生](https://so.toutiao.com/search?keyword=悉尼行凶案死伤中国公民均为留学生)
+1. [医生准备手术时发现患者腿上有蜱虫](https://so.toutiao.com/search?keyword=医生准备手术时发现患者腿上有蜱虫)
+1. [供电所领导被举报勾引已婚女士](https://so.toutiao.com/search?keyword=供电所领导被举报勾引已婚女士)
+1. [华为官宣P系列品牌升级为Pura](https://so.toutiao.com/search?keyword=华为官宣P系列品牌升级为Pura)
+1. [以方称希望俄谴责伊朗袭击 俄回应](https://so.toutiao.com/search?keyword=以方称希望俄谴责伊朗袭击+俄回应)
+1. [朔尔茨访华证明什么是中德关系主流](https://so.toutiao.com/search?keyword=朔尔茨访华证明什么是中德关系主流)
+1. [美媒：拜登支持率与特朗普仅差1%](https://so.toutiao.com/search?keyword=美媒：拜登支持率与特朗普仅差1%)
+1. [违建雨棚加了轮子后为何就不算违建](https://so.toutiao.com/search?keyword=违建雨棚加了轮子后为何就不算违建)
+1. [网友拍到武汉出现血红天空异象](https://so.toutiao.com/search?keyword=网友拍到武汉出现血红天空异象)
+1. [国际乒乓球比赛出现首个平局](https://so.toutiao.com/search?keyword=国际乒乓球比赛出现首个平局)
+1. [伊朗大使馆发文讽刺以色列](https://so.toutiao.com/search?keyword=伊朗大使馆发文讽刺以色列)
 1. [朔尔茨：德国市场欢迎中国汽车](https://so.toutiao.com/search?keyword=朔尔茨：德国市场欢迎中国汽车)
 1. [以色列军方拦截成功率高原因何在](https://so.toutiao.com/search?keyword=以色列军方拦截成功率高原因何在)
-1. [官方回应婆婆杀害儿媳3只狗](https://so.toutiao.com/search?keyword=官方回应婆婆杀害儿媳3只狗)
 1. [德企CEO：在华用不上“好久不见”](https://so.toutiao.com/search?keyword=德企CEO：在华用不上“好久不见”)
-1. [国际金价疯涨金饰却遇冷](https://so.toutiao.com/search?keyword=国际金价疯涨金饰却遇冷)
-1. [医院称引进遭举报嫖娼医生正常合规](https://so.toutiao.com/search?keyword=医院称引进遭举报嫖娼医生正常合规)
 1. [朔尔茨：赴华德国人变多了是好消息](https://so.toutiao.com/search?keyword=朔尔茨：赴华德国人变多了是好消息)
-1. [即将接任新加坡总理的黄循财是谁](https://so.toutiao.com/search?keyword=即将接任新加坡总理的黄循财是谁)
-1. [美媒：拜登支持率与特朗普仅差1%](https://so.toutiao.com/search?keyword=美媒：拜登支持率与特朗普仅差1%)
-1. [华为官宣P系列品牌升级为Pura](https://so.toutiao.com/search?keyword=华为官宣P系列品牌升级为Pura)
-1. [悉尼行凶案死伤中国公民均为留学生](https://so.toutiao.com/search?keyword=悉尼行凶案死伤中国公民均为留学生)
 1. [气象台称武汉红雾可能因附近有红光](https://so.toutiao.com/search?keyword=气象台称武汉红雾可能因附近有红光)
-1. [游客参观他人免费开放的祖宅嫌难看](https://so.toutiao.com/search?keyword=游客参观他人免费开放的祖宅嫌难看)
 1. [意大利后悔退出一带一路？名嘴解读](https://so.toutiao.com/search?keyword=意大利后悔退出一带一路？名嘴解读)
 1. [女子遛狗不牵绳被提醒后态度嚣张](https://so.toutiao.com/search?keyword=女子遛狗不牵绳被提醒后态度嚣张)
 1. [乌克兰东部局势“严重恶化”](https://so.toutiao.com/search?keyword=乌克兰东部局势“严重恶化”)
@@ -57,7 +70,6 @@
 1. [软水正成为心脑血管的新危险因素](https://so.toutiao.com/search?keyword=软水正成为心脑血管的新危险因素)
 1. [美官员：伊朗至少9枚导弹命中目标](https://so.toutiao.com/search?keyword=美官员：伊朗至少9枚导弹命中目标)
 1. [胡锡进：总亏损缩小到52743元](https://so.toutiao.com/search?keyword=胡锡进：总亏损缩小到52743元)
-1. [梁朝伟第六次获得金像奖影帝](https://so.toutiao.com/search?keyword=梁朝伟第六次获得金像奖影帝)
 1. [伊朗对战以色列 第一回合谁赢了](https://so.toutiao.com/search?keyword=伊朗对战以色列+第一回合谁赢了)
 1. [女生放学回家路上捡到钱交给警察](https://so.toutiao.com/search?keyword=女生放学回家路上捡到钱交给警察)
 1. [以色列最新表态：不寻求与伊朗开战](https://so.toutiao.com/search?keyword=以色列最新表态：不寻求与伊朗开战)
@@ -66,13 +78,10 @@
 1. [中央纪委国家监委：3人被查](https://so.toutiao.com/search?keyword=中央纪委国家监委：3人被查)
 1. [重庆受理燃气问题咨询和投诉7362件](https://so.toutiao.com/search?keyword=重庆受理燃气问题咨询和投诉7362件)
 1. [俄军一护卫舰驶入地中海](https://so.toutiao.com/search?keyword=俄军一护卫舰驶入地中海)
-1. [朔尔茨访华证明什么是中德关系主流](https://so.toutiao.com/search?keyword=朔尔茨访华证明什么是中德关系主流)
 1. [渔民打捞出某国新型水下窃密装置](https://so.toutiao.com/search?keyword=渔民打捞出某国新型水下窃密装置)
 1. [俄军在恰索夫亚尔与乌军展开激战](https://so.toutiao.com/search?keyword=俄军在恰索夫亚尔与乌军展开激战)
-1. [华为Pura 70或将于月底前到货](https://so.toutiao.com/search?keyword=华为Pura+70或将于月底前到货)
 1. [国家税务总局江苏税务局原局长被查](https://so.toutiao.com/search?keyword=国家税务总局江苏税务局原局长被查)
 1. [华为P70样机或于下周到店](https://so.toutiao.com/search?keyword=华为P70样机或于下周到店)
-1. [养1000多只鹅是一种什么体验](https://so.toutiao.com/search?keyword=养1000多只鹅是一种什么体验)
 1. [外媒：国际油价或因伊以冲突上涨](https://so.toutiao.com/search?keyword=外媒：国际油价或因伊以冲突上涨)
 1. [献血13次妻子用血遇阻 评论区热议](https://so.toutiao.com/search?keyword=献血13次妻子用血遇阻+评论区热议)
 1. [盘点云南泼水节装备“显眼包”](https://so.toutiao.com/search?keyword=盘点云南泼水节装备“显眼包”)
@@ -81,7 +90,6 @@
 1. [广东一大桥施工时倒塌 2死1伤1失联](https://so.toutiao.com/search?keyword=广东一大桥施工时倒塌+2死1伤1失联)
 1. [老詹常规赛生涯助攻数超11000](https://so.toutiao.com/search?keyword=老詹常规赛生涯助攻数超11000)
 1. [西双版纳泼水节群众“洗警”送祝福](https://so.toutiao.com/search?keyword=西双版纳泼水节群众“洗警”送祝福)
-1. [以方称希望俄谴责伊朗袭击 俄回应](https://so.toutiao.com/search?keyword=以方称希望俄谴责伊朗袭击+俄回应)
 1. [新“国九条”体现三大重要特点](https://so.toutiao.com/search?keyword=新“国九条”体现三大重要特点)
 1. [大哥自备小马扎坐高铁趴着休息](https://so.toutiao.com/search?keyword=大哥自备小马扎坐高铁趴着休息)
 1. [叙政府军遭极端组织袭击致1死1伤](https://so.toutiao.com/search?keyword=叙政府军遭极端组织袭击致1死1伤)
@@ -100,6 +108,5 @@
 1. [大姐向佛祖告状的普陀山香花券免了](https://so.toutiao.com/search?keyword=大姐向佛祖告状的普陀山香花券免了)
 1. [泽连斯基：乌军有部队主动放弃阵地](https://so.toutiao.com/search?keyword=泽连斯基：乌军有部队主动放弃阵地)
 1. [男生体考受伤站不起来爬向终点](https://so.toutiao.com/search?keyword=男生体考受伤站不起来爬向终点)
-1. [小孩跪地祈祷后屋顶玩具真掉下来了](https://so.toutiao.com/search?keyword=小孩跪地祈祷后屋顶玩具真掉下来了)
 1. [新款问界M5实车图曝光](https://so.toutiao.com/search?keyword=新款问界M5实车图曝光)
 <!-- END TOUTIAO -->
