--- a/archives/toutiao-search/2024-04-16.md
+++ b/archives/toutiao-search/2024-04-16.md
@@ -1,58 +1,70 @@
 # 2024-04-16
 
-共 229 条
+共 240 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 16 2024 14:00:44 GMT+0800 (China Standard Time) -->
-1. [俄被金属制裁 谁会闷声发大财](https://so.toutiao.com/search?keyword=俄被金属制裁+谁会闷声发大财)
+<!-- 最后更新时间 Tue Apr 16 2024 15:00:33 GMT+0800 (China Standard Time) -->
+1. [男子卖花被揭露进价欲上吊自杀](https://so.toutiao.com/search?keyword=男子卖花被揭露进价欲上吊自杀)
 1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
 1. [一组春景图带你看春日大地景观](https://so.toutiao.com/search?keyword=一组春景图带你看春日大地景观)
-1. [学校回应86岁老校长迎娶初恋](https://so.toutiao.com/search?keyword=学校回应86岁老校长迎娶初恋)
-1. [患癌男子4年由年轻到衰老去世](https://so.toutiao.com/search?keyword=患癌男子4年由年轻到衰老去世)
-1. [“老默”上海干跑腿被路人喊想吃鱼](https://so.toutiao.com/search?keyword=“老默”上海干跑腿被路人喊想吃鱼)
-1. [被举报勾引已婚女的供电所领导停职](https://so.toutiao.com/search?keyword=被举报勾引已婚女的供电所领导停职)
-1. [超5000只个股下跌](https://so.toutiao.com/search?keyword=超5000只个股下跌)
-1. [官方通报地铁石砖脱落孕妇被砸重伤](https://so.toutiao.com/search?keyword=官方通报地铁石砖脱落孕妇被砸重伤)
-1. [意大利比萨斜塔即将倒塌？](https://so.toutiao.com/search?keyword=意大利比萨斜塔即将倒塌？)
-1. [轿车冲撞过斑马线学生致1死1伤](https://so.toutiao.com/search?keyword=轿车冲撞过斑马线学生致1死1伤)
-1. [薛之谦演唱会“眼镜哥”：是前男友](https://so.toutiao.com/search?keyword=薛之谦演唱会“眼镜哥”：是前男友)
-1. [央行：我国人均存款约10.8万](https://so.toutiao.com/search?keyword=央行：我国人均存款约10.8万)
-1. [近期4位不满14周岁未成年人被判刑](https://so.toutiao.com/search?keyword=近期4位不满14周岁未成年人被判刑)
-1. [因同事吐槽 办公室取消五一假期](https://so.toutiao.com/search?keyword=因同事吐槽+办公室取消五一假期)
 1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
-1. [英领馆若被炸会怎么做？卡梅伦回应](https://so.toutiao.com/search?keyword=英领馆若被炸会怎么做？卡梅伦回应)
-1. [店员下错单被逼下跪道歉](https://so.toutiao.com/search?keyword=店员下错单被逼下跪道歉)
-1. [为乌生产炮弹的美陆军工厂爆发火灾](https://so.toutiao.com/search?keyword=为乌生产炮弹的美陆军工厂爆发火灾)
-1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
+1. [男子街头狂锤女子 路人拍摄不制止](https://so.toutiao.com/search?keyword=男子街头狂锤女子+路人拍摄不制止)
+1. [近期4位不满14周岁未成年人被判刑](https://so.toutiao.com/search?keyword=近期4位不满14周岁未成年人被判刑)
+1. [“老默”上海干跑腿被路人喊想吃鱼](https://so.toutiao.com/search?keyword=“老默”上海干跑腿被路人喊想吃鱼)
+1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
+1. [美驻华使馆对中方调查报告保持沉默](https://so.toutiao.com/search?keyword=美驻华使馆对中方调查报告保持沉默)
+1. [意大利比萨斜塔即将倒塌？](https://so.toutiao.com/search?keyword=意大利比萨斜塔即将倒塌？)
+1. [薛之谦演唱会“眼镜哥”：是前男友](https://so.toutiao.com/search?keyword=薛之谦演唱会“眼镜哥”：是前男友)
+1. [学校回应86岁老校长迎娶初恋](https://so.toutiao.com/search?keyword=学校回应86岁老校长迎娶初恋)
+1. [重庆经信委：燃气收费有误将退还](https://so.toutiao.com/search?keyword=重庆经信委：燃气收费有误将退还)
+1. [俄被金属制裁 谁会闷声发大财](https://so.toutiao.com/search?keyword=俄被金属制裁+谁会闷声发大财)
+1. [轿车冲撞过斑马线学生致1死1伤](https://so.toutiao.com/search?keyword=轿车冲撞过斑马线学生致1死1伤)
+1. [山东一男子当街打掉女子牙齿](https://so.toutiao.com/search?keyword=山东一男子当街打掉女子牙齿)
+1. [被举报勾引已婚女的供电所领导停职](https://so.toutiao.com/search?keyword=被举报勾引已婚女的供电所领导停职)
+1. [患癌男子4年由年轻到衰老去世](https://so.toutiao.com/search?keyword=患癌男子4年由年轻到衰老去世)
+1. [媒体：卧铺挂帘子不该被道德审判](https://so.toutiao.com/search?keyword=媒体：卧铺挂帘子不该被道德审判)
+1. [超5000只个股下跌](https://so.toutiao.com/search?keyword=超5000只个股下跌)
+1. [特斯拉裁员10%释放出什么信号](https://so.toutiao.com/search?keyword=特斯拉裁员10%释放出什么信号)
+1. [独居老人失联多日才被发现已去世](https://so.toutiao.com/search?keyword=独居老人失联多日才被发现已去世)
+1. [女生学到崩溃父亲安慰](https://so.toutiao.com/search?keyword=女生学到崩溃父亲安慰)
+1. [央行：我国人均存款约10.8万](https://so.toutiao.com/search?keyword=央行：我国人均存款约10.8万)
+1. [余承东：再过两天P70有好消息](https://so.toutiao.com/search?keyword=余承东：再过两天P70有好消息)
+1. [带数百斤黄金货款跑路？商家：没跑](https://so.toutiao.com/search?keyword=带数百斤黄金货款跑路？商家：没跑)
 1. [寺庙住持曾犯命案 潜逃23年被抓](https://so.toutiao.com/search?keyword=寺庙住持曾犯命案+潜逃23年被抓)
+1. [特斯拉市值一夜蒸发2200亿](https://so.toutiao.com/search?keyword=特斯拉市值一夜蒸发2200亿)
+1. [女子骑沙滩车侧翻身亡 景区回应](https://so.toutiao.com/search?keyword=女子骑沙滩车侧翻身亡+景区回应)
+1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
+1. [男子爬山遇大量坟墓直呼不对劲](https://so.toutiao.com/search?keyword=男子爬山遇大量坟墓直呼不对劲)
+1. [因同事吐槽 办公室取消五一假期](https://so.toutiao.com/search?keyword=因同事吐槽+办公室取消五一假期)
+1. [国家统计局：经济恢复有不平衡性](https://so.toutiao.com/search?keyword=国家统计局：经济恢复有不平衡性)
+1. [以军称伊朗的袭击将“遭到回应”](https://so.toutiao.com/search?keyword=以军称伊朗的袭击将“遭到回应”)
+1. [为乌生产炮弹的美陆军工厂爆发火灾](https://so.toutiao.com/search?keyword=为乌生产炮弹的美陆军工厂爆发火灾)
+1. [与醉汉冲突男生已取保回家](https://so.toutiao.com/search?keyword=与醉汉冲突男生已取保回家)
+1. [英领馆若被炸会怎么做？卡梅伦回应](https://so.toutiao.com/search?keyword=英领馆若被炸会怎么做？卡梅伦回应)
+1. [开封王婆到江西葛仙山啦](https://so.toutiao.com/search?keyword=开封王婆到江西葛仙山啦)
+1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
+1. [我国考古发掘迄今楚国最高等级墓葬](https://so.toutiao.com/search?keyword=我国考古发掘迄今楚国最高等级墓葬)
+1. [店员下错单被逼下跪道歉](https://so.toutiao.com/search?keyword=店员下错单被逼下跪道歉)
+1. [官方通报老人被用三轮拉到银行取款](https://so.toutiao.com/search?keyword=官方通报老人被用三轮拉到银行取款)
+1. [武王墩墓的墓主是楚考烈王吗](https://so.toutiao.com/search?keyword=武王墩墓的墓主是楚考烈王吗)
+1. [网友称高龄丁克离婚男子娶娇妻生子](https://so.toutiao.com/search?keyword=网友称高龄丁克离婚男子娶娇妻生子)
+1. [新加坡总理交棒意味着什么](https://so.toutiao.com/search?keyword=新加坡总理交棒意味着什么)
+1. [武王墩出土了哪些珍贵文物](https://so.toutiao.com/search?keyword=武王墩出土了哪些珍贵文物)
+1. [专家建议增加下半年法定节假日](https://so.toutiao.com/search?keyword=专家建议增加下半年法定节假日)
+1. [孙颖莎7150分女单排名世界第一](https://so.toutiao.com/search?keyword=孙颖莎7150分女单排名世界第一)
+1. [反击醉汉学生到底是不是正当防卫](https://so.toutiao.com/search?keyword=反击醉汉学生到底是不是正当防卫)
+1. [农民养老金为什么差距大](https://so.toutiao.com/search?keyword=农民养老金为什么差距大)
+1. [官方通报地铁石砖脱落孕妇被砸重伤](https://so.toutiao.com/search?keyword=官方通报地铁石砖脱落孕妇被砸重伤)
 1. [刘强东AI数字人今日直播首秀](https://so.toutiao.com/search?keyword=刘强东AI数字人今日直播首秀)
 1. [大叔慢动作教耍金箍棒瞬间快到飞起](https://so.toutiao.com/search?keyword=大叔慢动作教耍金箍棒瞬间快到飞起)
-1. [新加坡总理交棒意味着什么](https://so.toutiao.com/search?keyword=新加坡总理交棒意味着什么)
 1. [我国一季度GDP同比增长5.3%](https://so.toutiao.com/search?keyword=我国一季度GDP同比增长5.3%)
-1. [带数百斤黄金货款跑路？商家：没跑](https://so.toutiao.com/search?keyword=带数百斤黄金货款跑路？商家：没跑)
-1. [以军称伊朗的袭击将“遭到回应”](https://so.toutiao.com/search?keyword=以军称伊朗的袭击将“遭到回应”)
 1. [朔尔茨：希望中德增加对话互访交流](https://so.toutiao.com/search?keyword=朔尔茨：希望中德增加对话互访交流)
-1. [女子骑沙滩车侧翻身亡 景区回应](https://so.toutiao.com/search?keyword=女子骑沙滩车侧翻身亡+景区回应)
-1. [余承东：再过两天P70有好消息](https://so.toutiao.com/search?keyword=余承东：再过两天P70有好消息)
-1. [开封王婆到江西葛仙山啦](https://so.toutiao.com/search?keyword=开封王婆到江西葛仙山啦)
-1. [与醉汉冲突男生已取保回家](https://so.toutiao.com/search?keyword=与醉汉冲突男生已取保回家)
-1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
 1. [你买下铺会让别人坐吗](https://so.toutiao.com/search?keyword=你买下铺会让别人坐吗)
-1. [山东一男子当街打掉女子牙齿](https://so.toutiao.com/search?keyword=山东一男子当街打掉女子牙齿)
-1. [官方通报老人被用三轮拉到银行取款](https://so.toutiao.com/search?keyword=官方通报老人被用三轮拉到银行取款)
-1. [专家建议增加下半年法定节假日](https://so.toutiao.com/search?keyword=专家建议增加下半年法定节假日)
-1. [网友称高龄丁克离婚男子娶娇妻生子](https://so.toutiao.com/search?keyword=网友称高龄丁克离婚男子娶娇妻生子)
 1. [重庆燃气回应股价下跌](https://so.toutiao.com/search?keyword=重庆燃气回应股价下跌)
 1. [马伊琍走红毯像在踩高跷](https://so.toutiao.com/search?keyword=马伊琍走红毯像在踩高跷)
-1. [男子爬山遇大量坟墓直呼不对劲](https://so.toutiao.com/search?keyword=男子爬山遇大量坟墓直呼不对劲)
-1. [特斯拉市值一夜蒸发2200亿](https://so.toutiao.com/search?keyword=特斯拉市值一夜蒸发2200亿)
 1. [伊朗为何此时向以色列发起报复行动](https://so.toutiao.com/search?keyword=伊朗为何此时向以色列发起报复行动)
 1. [张伟丽单场奖金或达百万美元](https://so.toutiao.com/search?keyword=张伟丽单场奖金或达百万美元)
-1. [国家统计局：经济恢复有不平衡性](https://so.toutiao.com/search?keyword=国家统计局：经济恢复有不平衡性)
-1. [反击醉汉学生到底是不是正当防卫](https://so.toutiao.com/search?keyword=反击醉汉学生到底是不是正当防卫)
 1. [被前妻举报免职的原武大教授履新](https://so.toutiao.com/search?keyword=被前妻举报免职的原武大教授履新)
-1. [重庆经信委：燃气收费有误将退还](https://so.toutiao.com/search?keyword=重庆经信委：燃气收费有误将退还)
-1. [我国考古发掘迄今楚国最高等级墓葬](https://so.toutiao.com/search?keyword=我国考古发掘迄今楚国最高等级墓葬)
 1. [云南大理海东突发山火](https://so.toutiao.com/search?keyword=云南大理海东突发山火)
 1. [一组春景图，带你看春日大地景观](https://so.toutiao.com/search?keyword=一组春景图，带你看春日大地景观)
 1. [新“国九条”组合拳扶优限劣](https://so.toutiao.com/search?keyword=新“国九条”组合拳扶优限劣)
@@ -66,7 +78,6 @@
 1. [“提灯定损”涉事违建房屋确定拆除](https://so.toutiao.com/search?keyword=“提灯定损”涉事违建房屋确定拆除)
 1. [格鲁吉亚议会上演全武行](https://so.toutiao.com/search?keyword=格鲁吉亚议会上演全武行)
 1. [丈夫“同肝共苦”悄悄配型捐肝救妻](https://so.toutiao.com/search?keyword=丈夫“同肝共苦”悄悄配型捐肝救妻)
-1. [特斯拉裁员10%释放出什么信号](https://so.toutiao.com/search?keyword=特斯拉裁员10%释放出什么信号)
 1. [女生称一个人来演唱会 旁边男生愣了](https://so.toutiao.com/search?keyword=女生称一个人来演唱会+旁边男生愣了)
 1. [云南昆明晋宁山火已扑灭](https://so.toutiao.com/search?keyword=云南昆明晋宁山火已扑灭)
 1. [12306回应年轻人卧铺挂帘子](https://so.toutiao.com/search?keyword=12306回应年轻人卧铺挂帘子)
